--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ PORT=3000
 #Nombre de la aplicacion
 APP_NAME= Catalogo Papeleria (API) 
 
-MONGODB_URI=mongodb://localhost:127.0.0.1:27017/papeleria-catalogo
+MONGODB_URI=mongodb://localhost:27017/papeleria-catalogo
